--- a/canvas/practice code.html
+++ b/canvas/practice code.html
@@ -44,6 +44,10 @@ var score = 0; // Initialize score
 function startGame() {
     if (!gameRunning) {
         document.getElementById("game-over").style.display = "none"; // Hide the game over screen
+        myObstacles = []; // Reset obstacles
+        myProjectiles = []; // Reset projectiles
+        breakableWalls = []; // Reset breakable walls
+        score = 0; // Reset score
         myGamePiece = new component(30, 30, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/toy man_processed.jpeg", 10, 120, "image");
         myScore = new component("30px", "Consolas", "black", 280, 40, "text");
 
@@ -56,7 +60,7 @@ function startGame() {
         myGameArea.start();
         gameRunning = true;
         gameOver = false;
-        score = 0; // Reset score
+        musicStarted = false; // Reset music state
     }
 }
 
@@ -170,8 +174,7 @@ function updateGameArea() {
             myObstacles.push(new component(10, myGameArea.canvas.height - height - gap, pillarImage, x, height + gap, "image"));  // Bottom pole
 
             // Create a wall between the new pillars
-            
-            createWall(x, height, myGameArea.canvas.height - height - gap); // Create wall between top and bottom pillars
+            createWall(x, height, myGameArea.canvas.height - height - gap);
         }
 
         // Move obstacles
@@ -237,8 +240,10 @@ function updateGameArea() {
 // End the game and display the Game Over screen
 function endGame() {
     gameOver = true;
+    gameRunning = false;
     myGameArea.stop();
-    document.getElementById("game-over").style.display = "block";
+    document.getElementById("final-score").textContent = score; // Display final score
+    document.getElementById("game-over").style.display = "block"; // Show game over screen
 }
 
 function everyinterval(n) {
