--- a/canvas/practice code.html
+++ b/canvas/practice code.html
@@ -310,7 +310,11 @@ function shootProjectile() {
 </div>
 
 <br>
-<p>Use arrow keys to control the character and space bar to shoot projectiles.</p>
+<p>Use arrow keys to control the character and space bar to shoot projectiles.
+   Shoot the wall between the pillars before you pass through!
+   You will be rewarded a point for each wall you break and each pillar you pass.
+
+</p>
 
 </body>
 </html>
