--- a/canvas/practice code.html
+++ b/canvas/practice code.html
@@ -293,7 +293,7 @@ function stopMove(e) {
 }
 
 function shootProjectile() {
-    var projectile = new component(5, 5, "blue", myGamePiece.x + 30, myGamePiece.y + 12, "projectile");
+    var projectile = new component(5, 5, "green", myGamePiece.x + 30, myGamePiece.y + 12, "projectile");
     projectile.speedX = 5; // Projectile speed
     myProjectiles.push(projectile); // Add each new projectile to the array
 }
