--- a/canvas/practice code.html
+++ b/canvas/practice code.html
@@ -169,7 +169,7 @@ function updateGameArea() {
             var gap = Math.floor(Math.random() * (maxGap - minGap + 1) + minGap);
 
             // Use an image for the top and bottom pillars
-            var pillarImage = "american flag.jpeg"; // Replace with your image URL
+            var pillarImage = "bullet clipart2_processed.webp"; // Replace with your image URL
             myObstacles.push(new component(10, height, pillarImage, x, 0, "image"));  // Top pole
             myObstacles.push(new component(10, myGameArea.canvas.height - height - gap, pillarImage, x, height + gap, "image"));  // Bottom pole
 
