--- a/canvas/practice3.html
+++ b/canvas/practice3.html
@@ -168,12 +168,20 @@ function updateGameArea() {
             var maxGap = 150;
             var gap = Math.floor(Math.random() * (maxGap - minGap + 1) + minGap);
 
-            // Use color for the top and bottom pillars
-            myObstacles.push(new component(10, height, "green", x, 0, "color"));  // Top pole
-            myObstacles.push(new component(10, myGameArea.canvas.height - height - gap, "green", x, height + gap, "color"));  // Bottom pole
+            // Replace with an image for the top and bottom poles
+            var pillarImage = "https://your-image-url.com/pillar.png";  // Use your actual image URL
+            var pillarWidth = 50;  // Adjust the width of the pillar image
+            var pillarHeight = height;  // Adjust the height of the pillar image
+
+            // Top pole
+            myObstacles.push(new component(pillarWidth, pillarHeight, pillarImage, x, 0, "image"));
+
+            // Bottom pole
+            var bottomPillarHeight = myGameArea.canvas.height - height - gap;
+            myObstacles.push(new component(pillarWidth, bottomPillarHeight, pillarImage, x, height + gap, "image"));
 
             // Create a wall between the new pillars
-            createWall(x, height, myGameArea.canvas.height - height - gap);
+            createWall(x, height, bottomPillarHeight);
         }
 
         // Move obstacles
@@ -224,51 +232,16 @@ function updateGameArea() {
 
         // Update the score for passing pillars
         for (var i = 0; i < myObstacles.length; i += 2) {
-            if (myObstacles[i].x + myObstacles[i].width < myGamePiece.x && !myObstacles[i].scored) {
-                score += 1; // Gain a point for passing a pillar
-                myObstacles[i].scored = true; // Mark pillar as passed
+            if (myObstacles[i].x + myObstacles[i].width < myGamePiece.x && !myObstacles[i].passed) {
+                score += 1; // Increment score
+                myObstacles[i].passed = true; // Mark as passed
             }
         }
 
-        // Update the score display
         myScore.text = "SCORE: " + score;
         myScore.update();
-    }
-}
 
-// End the game and display the Game Over screen
-function endGame() {
-    gameOver = true;
-    gameRunning = false;
-    myGameArea.stop();
-    document.getElementById("final-score").textContent = score; // Display final score
-    document.getElementById("game-over").style.display = "block"; // Show game over screen
-}
-
-function everyinterval(n) {
-    return (myGameArea.frameNo / n) % 1 === 0;
-}
-
-function moveKey(e) {
-    if (!gameOver) {
-        switch(e.key) {
-            case 'ArrowUp':
-                myGamePiece.speedY = -2;
-                break;
-            case 'ArrowDown':
-                myGamePiece.speedY = 2;
-                break;
-            case 'ArrowLeft':
-                myGamePiece.speedX = -2;
-                break;
-            case 'ArrowRight':
-                myGamePiece.speedX = 2;
-                break;
-            case ' ': // Space bar to shoot
-                shootProjectile();
-                break;
-        }
-
+        // Play background music once game starts
         if (!musicStarted) {
             backgroundMusic.play();
             musicStarted = true;
@@ -276,44 +249,50 @@ function moveKey(e) {
     }
 }
 
-function stopMove(e) {
+function endGame() {
+    gameOver = true;
+    gameRunning = false;
+    musicStarted = false;
+    backgroundMusic.pause();
+    backgroundMusic.currentTime = 0; 
+    myGameArea.stop();
+    document.getElementById("game-over").style.display = "block";
+}
+
+function shootProjectile() {
+    var projectile = new component(10, 5, "black", myGamePiece.x + myGamePiece.width, myGamePiece.y + myGamePiece.height / 2 - 2.5);
+    projectile.speedX = 5; // Set the speed of the projectile
+    myProjectiles.push(projectile);
+}
+
+function moveKey(e) {
     if (!gameOver) {
-        switch(e.key) {
-            case 'ArrowUp':
-            case 'ArrowDown':
-                myGamePiece.speedY = 0;
-                break;
-            case 'ArrowLeft':
-            case 'ArrowRight':
-                myGamePiece.speedX = 0;
-                break;
+        if (e.code == 'ArrowUp') {
+            myGamePiece.speedY = -2; // Move up
+        }
+        if (e.code == 'ArrowDown') {
+            myGamePiece.speedY = 2; // Move down
+        }
+        if (e.code == 'Space') {
+            shootProjectile(); // Shoot projectile
         }
     }
 }
 
-function shootProjectile() {
-    var projectile = new component(5, 5, "green", myGamePiece.x + 30, myGamePiece.y + 12, "projectile");
-    projectile.speedX = 5; // Projectile speed
-    myProjectiles.push(projectile); // Add each new projectile to the array
+function stopMove(e) {
+    if (!gameOver) {
+        myGamePiece.speedY = 0; 
+    }
+}
+
+function everyinterval(n) {
+    if ((myGameArea.frameNo / n) % 1 == 0) return true;
+    return false;
 }
 
 </script>
 
-<!-- Buttons for starting and pausing the game -->
+<div id="game-over">GAME OVER<br>Press any key to restart</div>
 <button onclick="startGame()">Start Game</button>
-
-<div id="game-over">
-    <p>Game Over!</p>
-    <p>Your Score: <span id="final-score"></span></p>
-    <button onclick="startGame()">Restart</button>
-</div>
-
-<br>
-<p>Use arrow keys to control the character and space bar to shoot projectiles.</p>
-<p>Shoot the wall between the pillars before you pass through!</p>
-<p>You will be rewarded a point for each wall you break and each pillar you pass.</p>
-
-
-
 </body>
 </html>
